--- a/BaseDebug/src/main/res/values/language_debug.xml
+++ b/BaseDebug/src/main/res/values/language_debug.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="debug_msg">这是一个中文信息</string>
+    <string name="com_bihe0832_praise_positive">赐我力量</string>
+    <string name="com_bihe0832_praise_negative">吐槽一下</string>
 </resources>
