--- a/CommonDebug/src/main/res/layout/com_bihe0832_activity_debug_core_log.xml
+++ b/CommonDebug/src/main/res/layout/com_bihe0832_activity_debug_core_log.xml
@@ -21,7 +21,7 @@
             android:layout_height="24dp"
             android:layout_marginLeft="16dp"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_left_arrow"
+            android:src="@drawable/icon_left_arrow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,7 +34,7 @@
             android:layout_height="24dp"
             android:layout_marginRight="16dp"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_menu"
+            android:src="@drawable/icon_menu"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
