--- a/BaseDebug/src/main/res/values/language_debug.xml
+++ b/BaseDebug/src/main/res/values/language_debug.xml
@@ -3,4 +3,5 @@
     <string name="debug_msg">这是一个中文信息</string>
     <string name="com_bihe0832_praise_positive">赐我力量</string>
     <string name="com_bihe0832_praise_negative">吐槽一下</string>
+    <string name="name_permission_debug">M3U8下载助手需要将&lt;font color =\'#38ADFF\'&gt;&lt;b&gt;下载数据存储在SD卡&lt;/b&gt;&lt;/font&gt;才能访问，当前手机尚未开启存储权限，请点击「点击开启」前往设置！</string>
 </resources>
