--- a/CommonAbout/src/main/res/layout/card_setting_go.xml
+++ b/CommonAbout/src/main/res/layout/card_setting_go.xml
@@ -87,7 +87,7 @@
             android:layout_height="16dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_right_go"
+            android:src="@drawable/icon_right_go"
             app:tint="@color/textColorPrimary"
             android:visibility="visible"
             tools:visibility="visible"
