--- a/CommonPraise/src/main/res/layout/com_bihe0832_dialog_user_praise.xml
+++ b/CommonPraise/src/main/res/layout/com_bihe0832_dialog_user_praise.xml
@@ -109,7 +109,7 @@
         android:layout_height="24dp"
         android:layout_marginLeft="-12dp"
         android:layout_marginBottom="-16dp"
-        android:background="@drawable/ic_close"
+        android:background="@drawable/icon_close"
         app:layout_constraintBottom_toTopOf="@+id/dialog_bg"
         app:layout_constraintStart_toEndOf="@+id/dialog_bg" />
 
