优化多语言切换

--- a/BaseDebug/src/main/res/values-en/language_debug.xml
+++ b/BaseDebug/src/main/res/values-en/language_debug.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="debug_msg">this is an English msg</string>
+    <string name="settings_language_title">Language</string>
+
     <string name="com_bihe0832_praise_positive">positive</string>
     <string name="com_bihe0832_praise_negative">negative</string>
     <string name="name_permission_debug">M3U8 Download Need to &lt;font color =\'#38ADFF\'&gt;&lt;b&gt;Download data to SDCard&lt;/b&gt;&lt;/font&gt;</string>
