--- a/ModelRes/src/main/res/values/common_permission_string.xml
+++ b/ModelRes/src/main/res/values/common_permission_string.xml
@@ -7,6 +7,7 @@
     <string name="com_bihe0832_permission_positive">开启授权</string>
     <string name="com_bihe0832_permission_default_content">%s的%s功能需要手机授予%s权限，缺少权限有可能会影响功能的正常使用。</string>
 
+    <string name="com_bihe0832_permission_tips">权限使用说明</string>
 
     <string name="common_permission_title_camera">相机</string>
     <string name="common_permission_title_qrcode">扫描、识别二维码</string>
