简易文本查看工具拆分为独立模块

--- a/CommonFilePreview/src/main/res/layout/com_bihe0832_activity_debug_core_log.xml
+++ b/CommonFilePreview/src/main/res/layout/com_bihe0832_activity_debug_core_log.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/white"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
@@ -46,7 +47,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="日志查看：game_helper_core_202212"
+            tools:text="日志查看：game_helper_core_202212"
             android:textColor="@color/colorOnPrimary"
             android:textSize="10dp"
             app:layout_constraintEnd_toStartOf="@id/title_icon"
