--- a/ModelRes/src/main/res/values/common_about_res.xml
+++ b/ModelRes/src/main/res/values/common_about_res.xml
@@ -6,20 +6,24 @@
     <string name="about_app">@string/app_name</string>
 
     <string name="settings_about_title">关于</string>
+    <string name="settings_about_app">@string/app_name</string>
+
     <string name="settings_message_title">消息中心</string>
+    <string name="settings_version_title">版本信息</string>
     <string name="settings_update_title">版本更新</string>
     <string name="settings_update_tips">发现新版本</string>
-    <string name="settings_update_current"> 当前版本：</string>
-
-
+    <string name="settings_update_current">当前版本：</string>
 
     <string name="wechat_id">zixie_shi</string>
     <string name="wechat_name">子勰随笔</string>
     <string name="wechat_sub_content">关注开发者公众号</string>
+    <string name="wechat_official_account">微信公众号</string>
+    <string name="wechat_sub_content_tips">前往关注</string>
 
     <string name="contact_QQ_join_failed">未安装手Q或手Q版本过低，请手动添加</string>
 
-    <string name="clear_tips">缓存清理将为你清除 &lt;font color=\'#38ADFF\'&gt;各种缓存资源&lt;/font&gt;，清理期间请耐心等待，清理结束后会自动退出应用，是否开始清理？</string>
-    <string name="clear_loading">正在清理，请稍候~</string>
+    <string name="settings_clear_title">缓存清理</string>
+    <string name="settings_clear_tips">缓存清理将为你清除 &lt;font color=\'#38ADFF\'&gt;各种缓存资源&lt;/font&gt;，清理期间请耐心等待，清理结束后会自动退出应用，是否开始清理？</string>
+    <string name="settings_clear_loading">正在清理，请稍候~</string>
 
 </resources>
