--- a/Framework/src/main/res/values/common_res.xml
+++ b/Framework/src/main/res/values/common_res.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="custom_density" translatable="false">360</string>
+    <string name="common_waiting_duration_restart" translatable="false">1500</string>
+
     <string name="router_schema" translatable="false">zixie</string>
     <string name="feedback_qq" translatable="false">2217661422</string>
     <string name="feedback_mail" translatable="false">app@bihe0832.com</string>
     <string name="feedback_url" translatable="false">https://support.qq.com/product/290858</string>
+
     <string name="version_url" translatable="false"></string>
     <string name="update_url" translatable="false"></string>
     <string name="message_url" translatable="false"></string>
